# parsimon

./: .gitmodules  Cargo.toml  Dockerfile  README.md
crates/clustering-impls/: Cargo.toml  README.md
crates/clustering-impls/src/: distance.rs  feature.rs  greedy.rs  lib.rs  utils.rs
crates/linksim-impls/: Cargo.toml  README.md
crates/linksim-impls/src/: lib.rs  minim.rs  ns3.rs  utils.rs
crates/linksim-impls/src/minim/: tests.rs
crates/linksim-impls/src/minim/snapshots/: linksim_impls__minim__tests__config_correct.snap  linksim_impls__minim__tests__config_correct_loaded.snap
crates/linksim-impls/src/ns3/: full.rs
crates/linksim-impls/tests/: ns3_runs.rs
crates/ns3-frontend/: Cargo.toml  README.md
crates/ns3-frontend/src/: lib.rs
crates/ns3-frontend/tests/: ns3-runs.rs  ns3_runs.rs
crates/parsimon/: Cargo.toml
crates/parsimon-core/: Cargo.toml  README.md
crates/parsimon-core/src/: .network.rs.pending-snap  aggregator.rs  client.rs  cluster.rs  constants.rs  distribute.rs  edist.rs  ident.rs  lib.rs  linksim.rs  mapping.rs  network.rs  opts.rs  pruner.rs  routing.rs  run.rs  spec.rs  testing.rs  units.rs  utils.rs
crates/parsimon-core/src/network/: routing.rs  topology.rs  types.rs
crates/parsimon-core/src/network/snapshots/: parsimon_core__network__routing__tests__route_eight_node_succeeds.snap  parsimon_core__network__routing__tests__route_eight_node_works.snap  parsimon_core__network__routing__tests__route_three_node_succeeds.snap  parsimon_core__network__routing__tests__route_three_node_works.snap  parsimon_core__network__topology__tests__eight_node_topology_works.snap  parsimon_core__network__topology__tests__three_node_topology_works.snap
crates/parsimon-core/src/snapshots/: parsimon_core__network__tests__link_sim_desc_correct.snap  parsimon_core__routing__tests__route_eight_node_works.snap  parsimon_core__routing__tests__route_three_node_works.snap
crates/parsimon-driver/: Cargo.toml
crates/parsimon-driver/src/: lib.rs  main.rs  session.rs
crates/parsimon-utils/: Cargo.toml  README.md
crates/parsimon-utils/src/: lib.rs
crates/parsimon-worker/: Cargo.toml
crates/parsimon-worker/src/: lib.rs  main.rs  worker.rs
crates/parsimon/src/: core.rs  impls.rs  lib.rs  utils.rs  worker.rs
crates/parsimon/src/impls/: clustering.rs  linksim.rs
examples/poisson/: Cargo.toml
examples/poisson/src/: main.rs
src/: client.rs  delay.rs  ident.rs  lib.rs  linksim.rs  mapping.rs  network.rs
