[workspace]
members = [
    "crates/parsimon",
    "crates/parsimon-core",
    "crates/parsimon-worker",
    "crates/parsimon-utils",
    "crates/linksim-impls",
    "crates/clustering-impls",
    "crates/ns3-frontend",
    "examples/poisson",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.65"
derive-new = "0.5.9"
insta = { version = "1.21.0", features = ["yaml"] }
petgraph = { version = "0.6.2", features = ["serde-1"] }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rayon = "1.5.3"
rustc-hash = "1.1.0"
tempfile = "3.3.0"
thiserror = "1.0.37"
typed-builder = "0.11.0"
serde = { version = "1.0.145", features = ["derive"] }
