[workspace]
members = [
    "crates/parsimon",
    "crates/parsimon-core",
    "crates/parsimon-worker",
    "crates/parsimon-utils",
    "crates/linksim-impls",
    "crates/clustering-impls",
    "crates/ns3-frontend",
    "examples/poisson",
]
exclude =[
    "backends/High-Precision-Congestion-Control/gen_path",
    "backends/High-Precision-Congestion-Control/gen_path_empirical",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.75"
derive-new = "0.6.0"
insta = { version = "1.34.0", features = ["yaml"] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rayon = "1.8.0"
rustc-hash = "1.1.0"
tempfile = "3.8.1"
thiserror = "1.0.50"
typed-builder = "0.18.0"
serde = { version = "1.0.193", features = ["derive"] }
