[workspace]
members = [
    "crates/parsimon",
    "crates/parsimon-core",
    "crates/parsimon-worker",
    "crates/parsimon-utils",
    "crates/linksim-impls",
    "crates/clustering-impls",
    "crates/ns3-frontend",
    "examples/poisson",
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.82"
derive-new = "0.6.0"
insta = { version = "1.38.0", features = ["yaml"] }
petgraph = { version = "0.6.4", features = ["serde-1"] }
rand = { version = "0.8.5" }
rand_distr = { version = "0.4.3" }
rayon = "1.10.0"
rustc-hash = "1.1.0"
tempfile = "3.10.1"
thiserror = "1.0.58"
typed-builder = "0.18.1"
serde = { version = "1.0.197", features = ["derive"] }
