[package]
name = "clustering-impls"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
derive-new = { workspace = true }
parsimon-core = { version = "0.1.0", path = "../parsimon-core" }
rayon = { workspace = true }
rustc-hash = "1.1.0"

[features]
