[package]
name = "clustering-impls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.0.0"
derive-new = "0.5.9"
parsimon-core = { version = "0.1.0", path = "../parsimon-core" }
rayon = "1.5.1"
rustc-hash = "1.1.0"

[features]
