[package]
name = "clustering-impls"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
derive-new = { workspace = true }
env_logger = "0.10.0"
indicatif = "0.17.5"
log = "0.4.19"
parsimon-core = { version = "0.1.0", path = "../parsimon-core" }
rayon = { workspace = true }
rustc-hash = "1.1.0"

[features]
