[package]
name = "linksim-impls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
cmd_lib = "1.3.0"
minim = { path = "../../../minim" }
ns3-frontend = { path = "../ns3-frontend" }
parsimon-core = { path = "../parsimon-core" }
rustc-hash = "1.1.0"
thiserror = "1.0.30"
typed-builder = "0.10.0"

[dev-dependencies]
anyhow = "1.0.56"
insta = "1.13.0"
tempfile = "3.3.0"
