[package]
name = "linksim-impls"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
cmd_lib = "1.3.0"
minim = { path = "../../../minim" }
ns3-frontend = { path = "../ns3-frontend" }
parsimon-core = { path = "../parsimon-core" }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
