[package]
name = "ns3-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.3.0"
parsimon-core = { path = "../parsimon-core" }
thiserror = "1.0.30"
typed-builder = "0.9.1"

[dev-dependencies]
anyhow = "1.0.51"
insta = "1.8.0"
tempfile = "3.2.0"
