[package]
name = "ns3-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.3.0"
derivative = "2.2.0"
parsimon-core = { path = "../parsimon-core" }
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.32"
typed-builder = "0.10.0"

[dev-dependencies]
anyhow = "1.0.61"
insta = "1.18.2"
tempfile = "3.3.0"
