[package]
name = "parsimon-core"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.24"
crossbeam-channel = "0.5.6"
delegate = "0.8.0"
derive-new = { workspace = true }
derive_more = "0.99.17"
env_logger = "0.10.0"
indicatif = "0.17.5"
itertools = "0.10.4"
log = "0.4.19"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num_cpus = "1.13.1"
ordered-float = "3.1.0"
petgraph = { workspace = true }
rand = "0.8.5"
rayon = { workspace = true }
rmp-serde = "1.1.1"
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.96"
thiserror = { workspace = true }
tokio = { version = "1.28.0", features = ["full"] }
typed-builder = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }

[features]
