[package]
name = "parsimon-core"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.31"
crossbeam-channel = "0.5.8"
delegate = "0.10.0"
derive-new = { workspace = true }
derive_more = "0.99.17"
itertools = "0.12.0"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num_cpus = "1.16.0"
ordered-float = "4.1.1"
petgraph = { workspace = true }
rand = "0.8.5"
rayon = { workspace = true }
rmp-serde = "1.1.2"
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.108"
thiserror = { workspace = true }
tokio = { version = "1.34.0", features = ["full"] }
typed-builder = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }

[features]
