[package]
name = "parsimon-utils"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linksim-impls = { path = "../linksim-impls" }
parsimon-core = { path = "../parsimon-core" }
rmp-serde = "1.1.2"
serde = { workspace = true }
serde_dhall = "0.12.1"
serde_json = "1.0.108"
thiserror = { workspace = true }
