[package]
name = "poisson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
parsimon-core = { path = "../../crates/parsimon-core" }
itertools = "0.10.5"
linksim-impls = { path = "../../crates/linksim-impls" }
rand_distr = "0.4.3"
anyhow.workspace = true
rand = "0.8.5"
