[package]
name = "poisson"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { version = "4.0.32", features = ["derive"] }
itertools = "0.10.5"
parsimon = { path = "../../crates/parsimon" }
rand_distr = "0.4.3"
rand = "0.8.5"
